# JWCEssentials

./: .gitignore  CMakeLists.txt  Docket.md  Escapes.cpp  Escapes.h  JWCEssentials.cpp  LICENSE  Paths.cpp  Paths.h  README.md  Reference.md  configure.sh  cygpath.sh.linux  utf8_string_handle.cpp  utf8_string_handle.h
Bash/: NewAge_forward.sh  NewAge_stage.sh  SearchFile.sh  bash_new_script.sh  branchinfo.sh  colors.sh  create_symlink.sh  git_indentity_relay.sh  git_snapshot_worktree.sh  grep_nonempty.sh  if_worktree_dirty.sh  in_dir.sh  in_this_context_Package.sh.src  list_exports.sh  newage_all_build_coordinated.sh  newage_all_build_managed.sh  newage_all_build_native.sh  newage_all_configure.sh  newage_build_coordinated.sh  newage_build_managed.sh  newage_build_native.sh  newage_collect.sh  newage_dep_sort.sh  newage_expand.sh  newage_export.sh  newage_futures.sh  newage_get.sh  newage_get_deps.sh  newage_go.sh  newage_named_path.sh  newage_repo_list.sh  newage_run_in_context.sh  newage_source_context.sh  on_remote.sh  remote_info.sh  remotes.sh  remotes_info.sh  resolve_path.sh  shuttle_to.sh  verbose.sh  (+2 more)
C/Mercury/: CMakeLists.txt  Mercury.c  Mercury.h  MercuryCPU.c  MercuryCPU.h  MercuryStrings.c  stack_management.knowledge  test.cpp
Dev/: NewAge.dev.sh  build_coordinated.sh_template.txt  build_has_cs_managed.sh  build_has_cs_native.sh  build_managed.sh  build_native.sh  futures.lst  in_this_context.sh
JWCEssentials.net/: .gitignore
JWCEssentials.net/JWCEssentials.net/: utf8_string_handle.cs
JWCProcessHandler/: CMakeLists.txt  ProcessHandler.cpp  ProcessHandler.h
JWCProcessHandler/Linux/: ProcessHandler_Linux.cpp
JWCProcessHandler/Windows/: ProcessHandler_Windows.cpp
Linux/: Paths_Linux.cpp
Project/AnsiEffectSniffer/: AnsiEffectSniffer.sln
Project/AnsiEffectSniffer/AnsiEffectSniffer/: AnsiEffectSniffer.cs  AnsiEffectSniffer.csproj
Project/AnsiEffectSniffer/Tests/AnsiEffectSniffer.Tests/: AnsiEffectSniffer.Tests.csproj  SnifferTests.cs
Project/CSProj/: CSProj.slnx
Project/CSProj/CSProj/: CSProj.cs  CSProj.csproj
Project/CSProj/csproj_add_my_references/: Program.cs  csproj_add_my_references.csproj
Project/CSProj/csproj_add_property/: Program.cs  csproj_add_property.csproj
Project/CSProj/csproj_add_reference/: Program.cs
Project/CSProj/csproj_list_references/: Program.cs
Project/CSProj/test_target/: Program.cs  test_target.csproj
Project/JWCCommandSpawn/: CMakeLists.txt
Project/JWCCommandSpawn/include/JWCCommandSpawn/: CommandSpawn.h
Project/JWCCommandSpawn/src/: CommandSpawn.cpp  test.cpp  test.h  test_bash_invoke.cpp
Project/JWCCommandSpawn/src/Platform_Linux/: Args.cpp  Args.h  CommandSpawn_Linux.cpp
Project/JWCCommandSpawn/src/Platform_Windows/: CommandSpawn_Windows.cpp
Project/JWCEssentials.net/: JWCEssentials.net.sln
Project/JWCEssentials.net/JWCEssentials.net/: HasherClass.cs  IOwnedInteropStruct.cs  JWCEssentials.cs  JWCEssentials.net.csproj  RandomGenerator.cs  TLS.cs  struct_array_struct.cs  utf8_string_struct.cs
Project/JWCEssentials.net/test/: Program.cs  test.csproj
Project/JWCProcessHandler/: CMakeLists.txt  Intern.h  ProcessHandler.cpp  ProcessHandler.h  test.cpp  test.h  test_bash_invoke.cpp
Project/JWCProcessHandler/Platform_Linux/: Args.cpp  Args.h  ProcessHandler_Linux.cpp  execv args.txt
Project/Mercury.net/: Mercury.net.sln
Project/Mercury.net/AbsurdlyLargeDemo/: AbsurdlyLargeDemo.csproj  Program.cs
Project/Mercury.net/EDemo/: EDemo.csproj  Program.cs
Project/Mercury.net/RootTest/: Program.cs
Project/Mercury.net/SimpleTest/: Program.cs
Project/Mercury.net/UltraNumber/: UltraNumber.cs  UltraNumber.csproj
Project/Mercury.net/UltraNumber.Tests/: UltraNumber.Tests.csproj  UltraNumberInstanceTests.cs  UltraNumberTests.cs
Test/: test.h  test_bash_invoke.cpp
Tools/spawn_bash_probe/: CMakeLists.txt  spawn_bash_probe.cpp
Windows/: Paths_Windows.cpp
docs/: Bash commands.md  Mercury.md  NewAgeEnvironment.md  NewAge_Prompt.md  Repo example 20260516_133620.md  Ubuntu 26.04 Free Development Baseline.md  Windows Free Development Baseline.md  expansion_manual.md
docs/Dev/: JWCEssentials.Reference prompt.params.md  Reference Maintenance prompt.md
examples/feffect/: first.feffect
include/JWCEssentials/: BufferHelper.h  ErrorSystem.h  ErrorSystem.h_  Escapes.h  HasherClass.h  HasherClass32.h  HasherClass64.h  HasherFactory.h  Hasher_BufferedForCallback32.h  Hasher_BufferedForCallback64.h  Hasher_PRNG32.h  Hasher_PRNG64.h  Hasher_SMHasher.h  Intern.h  JWCEssentials.cmake  JWCEssentials.h  JWCMain.h  Paths.h  Random_Generator.h  Random_MT19937.h  SingleLink_Node.h  TLS.h  Terminal.h  feffect.h  struct_array_struct.h  utf8_string_handle.h  utf8_string_struct.h
src/: BufferHelper.cpp  ErrorSystem.cpp  ErrorSystem.cpp_  Escapes.cpp  JWCEssentials.cpp  Paths.cpp  TLS.cpp  feffect.cpp  struct_array_struct.cpp  utf8_string_handle.cpp  utf8_string_struct.cpp
src/FromSMHasher/: CMakeLists.txt  farmhash-c.c  farmhash-c.h
src/Hasher/: Hasher.cmake  HasherClass.cpp  HasherClass32.cpp  HasherClass64.cpp  HasherFactory.cpp  Hasher_BufferedForCallback32.cpp  Hasher_BufferedForCallback64.cpp  Hasher_PRNG32.cpp  Hasher_PRNG64.cpp  Hasher_SMHasher.cpp
src/Platform_Linux/: Paths_Linux.cpp  TLS.cpp  TLS_Linux.cpp  TLS_Linux.h  Terminal_Linux.cpp
src/Platform_Windows/: Paths_Windows.cpp  TLS.cpp  TLS.h  TLS_Windows.cpp  Terminal_Windows.cpp
src/Random/: Random.cmake  Random_Generator.cpp  Random_MT19937.cpp
src/Test/: test.cpp  test.h
src/Utils/: ExampleFile.sh  feffect.cpp  rand_identifier.cpp  split_arg.cpp
src/newage_shell_touch/: CMakeLists.txt  newage_shell_touch.cpp
